# tauri-example

./: .eslintrc.json  .gitattributes  .gitignore  README.md  eslint.config.js  eslint.config.mjs  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  update.sh  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-auto-merge.yml
isolation-dist/: index.js
src/: App.tsx  index.css  index.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  file.rs  main.rs
src/components/: StyledTextField.tsx  StyledTypography.tsx  TotpItem.tsx
src/features/ui/: StyledTextField.tsx  TotpItem.tsx
src/features/ui/alert/: component.tsx
src/features/ui/circular-progress/: component.tsx  style.css
src/hooks/: useFile.ts
